uipath-commons/main/default/objects/USA_States__mdt/USA_States__mdt.object-meta.xml
<CustomObject>
    <label>USA States</label>
    <pluralLabel>USA States</pluralLabel>
</CustomObject>