uipath-commons/main/default/objects/USA_States__mdt/fields/Billing_State_Code__c.field-meta.xml
<CustomField>
        <fullName>Billing_State_Code__c</fullName>
        <label>Billing State Code</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>