uipath-commons/main/default/objects/USA_States__mdt/fields/Region__c.field-meta.xml
<CustomField>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>