uipath-commons/main/default/objects/USA_States__mdt/fields/US_State__c.field-meta.xml
<CustomField>
        <fullName>US_State__c</fullName>
        <label>US State</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>